added the form on contact and the card in the index

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,6 +24,17 @@
         </div>
       </nav>
       <!--END BOOSTRAP NAVBAR -->
+      <!--START BIO -->
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="card-link">Card link</a>
+          <a href="#" class="card-link">Another link</a>
+        </div>
+      </div>
+      <!--END BIO -->
       <!--START BOOTSTRAP FOOTER -->
       <div class="footer-copyright text-center py-3">© 2020 Copyright:
         <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
