finishing the contact page

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="C:\Users\noahh\Documents\gwubootcamp\homework\homework-02\assest\CSS\style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="C:\Users\noahh\Documents\gwubootcamp\homework\homework-02\assest\CSS\style.css">
   <title>Contact</title>
 </head>
 <body>
@@ -18,45 +18,51 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Portfolio</a>
-        <a class="nav-item nav-link" href="#">Contact</a>
+        <a class="nav-item nav-link active" href=".\index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href=".\portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link" href=".\contact.html">Contact</a>
       </div>
     </div>
   </nav> <!--END BOOSTRAP NAVBAR -->
- 
+  
   <!-- START CARD -->
   <div class="container">
     <div class="card">
-      <h1>title test</h1>
+      <h1>Contact</h1>
+      <hr>
       <div class="card-body">
         
         <!--START FORM -->
         <form>
           <div class="form-group">
             <label for="name">Your Name</label>
-            <input type="name" class="form-control" id="exampleInputEmail1" placeholder="Joe Smith">
-          </div>
+            <input type="name" class="form-control" id="userName" placeholder="Joe Smith">
+          </div> 
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="email" class="form-control" id="exampleInputPassword1" placeholder="joesmith@example.com">
+            <input type="email" class="form-control" id="userEmail" placeholder="joesmith@example.com">
+          </div>
+          <div class="form-group">
+            <label for="identityTheft">Enter some stuff here or else...</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Like your social security number and credit card info,those might be helpful"></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form> <!--END FORM -->
-
+        
       </div>
     </div>  
   </div>  <!--END CARD -->
   
   <!--START BOOTSTRAP FOOTER -->
-  <div class="footer-copyright text-center py-3 footerclass" >© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-  </div><!--END BOOSTRAP FOOTER -->
-
+  <div class="footer-copyright text-center py-3 footerclass">
+    © 2020 Copyright:
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Surprise</a>
+  </div> <!--END BOOSTRAP FOOTER -->
+  
 </body>
 
 <!--BOOTSTRAP JAVASCRIPT -->
-<script
+<script 
 src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
 crossorigin="anonymous"
