--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,61 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\noahh\Documents\gwubootcamp\homework\homework-02\assest\CSS\style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Index</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="C:\Users\noahh\Documents\gwubootcamp\homework\homework-02\assest\CSS\style.css">
+  <title>Index</title>
 </head>
 <body>
-    <!--START BOOTSTRAP NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Noah's Bio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Portfolio</a>
-            <a class="nav-item nav-link" href="#">Contact</a>
+  
+  <!--START BOOTSTRAP NAVBAR -->
+  <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Noah's Bio</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href=".\index.html">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href=".\portfolio.html">Portfolio</a>
+        <a class="nav-item nav-link" href=".\contact.html">Contact</a>
+      </div>
+    </div>
+  </nav> <!--END BOOSTRAP NAVBAR -->
+  
+  <!--START BIO -->
+  <div class="container-fluid">
+    <div class="card">
+      <div class="card-body">
+        <h1 class="card-title">About Me</h1>
+        <hr>
+        <div class="row">
+          <div class="col-4">
+            <img src="C:\Users\noahh\Documents\gwubootcamp\homework\homework-02\assest\images\me.jpg" alt="bioPhoto" class="img-thumbnail">
+          </div>
+          <div class="col-7">
+            <p class="card-text">Hello! My name is Noah. I am a 23 year old web development student also really interested in music. I play guitar and am super picky about my headphone quality! </p>
           </div>
         </div>
-      </nav>
-      <!--END BOOSTRAP NAVBAR -->
-      <!--START BIO -->
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
-        </div>
+        <a href="https://www.flickr.com/photos/noahhayne/" class="card-link">Flickr</a>
+        <a href="https://www.instagram.com/nmhphoto/?hl=en" class="card-link">Instagram</a>
       </div>
-      <!--END BIO -->
-      <!--START BOOTSTRAP FOOTER -->
-      <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-      </div>
-      <!--END BOOSTRAP FOOTER -->
+    </div> 
+  </div> <!--END BIO -->
+  
+  <!--START BOOTSTRAP FOOTER -->
+  <div class="footer-copyright text-center py-3 footerclass">
+    © 2020 Copyright:
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Surprise</a>
+  </div> <!--END BOOSTRAP FOOTER -->
+  
 </body>
-    <!--BOOTSTRAP JAVASCRIPT -->
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"
-    ></script>
-    <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"
-    ></script>
-    <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"
-    ></script>
-    <!--END BOOSTRAP JAVASCRIPT -->
+
+<!--BOOTSTRAP JAVASCRIPT -->
+<script
+src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+crossorigin="anonymous"
+src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+crossorigin="anonymous"
+src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+crossorigin="anonymous"
+></script> <!--END BOOSTRAP JAVASCRIPT -->
 </html>
