trying to fix photo issue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="C:\Users\noahh\Documents\gwubootcamp\homework\homework-02\assest\CSS\style.css">
+  <link rel="stylesheet" href="\assest\CSS\style.css">
   <title>Index</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
         <hr>
         <div class="row">
           <div class="col-4">
-            <img src="C:\Users\noahh\Documents\gwubootcamp\homework\homework-02\assest\images\me.jpg" alt="bioPhoto" class="img-thumbnail">
+            <img src="\assest\images\me.jpg">
           </div>
           <div class="col-7">
             <p class="card-text">Hello! My name is Noah. I am a 23 year old web development student also really interested in music. I play guitar and am super picky about my headphone quality! </p>
