fixing photo issue

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <hr>
         <div class="row">
           <div class="col-4">
-            <img src="\assest\images\me.jpg">
+            <img src=".\assest\images\me.jpg" alt="bioPhoto" class="img-thumbnail">
           </div>
           <div class="col-7">
             <p class="card-text">Hello! My name is Noah. I am a 23 year old web development student also really interested in music. I play guitar and am super picky about my headphone quality! </p>
