--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
             <input type="email" class="form-control" id="userEmail" placeholder="joesmith@example.com">
           </div>
           <div class="form-group">
-            <label for="identityTheft">Enter some stuff here or else...</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Like your social security number and credit card info,those might be helpful"></textarea>
+            <label for="identityTheft">Send me a message!</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1" placeholder="What have you been listening to?"></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form> <!--END FORM -->
